# Hackathon_DIGPHAT

./: 01_Model_Development.ipynb  02_Model_Deployment.ipynb  AGENTS.md  Model_Development.ipynb  My_Model_Devepmemt.ipynb  README.md  extract_position.ipynb
.sisyphus/: COMPLETION_REPORT.md  boulder.json
.sisyphus/evidence/: TASK-1-COMPLETION-SUMMARY.md  f3-fix-nan-handling.txt  f3-manual-qa.txt  f4-scope-fidelity.txt  final-verification-summary.md  task-1-deps-check.txt  task-1-mice-fix-cell26.txt  task-1-mice-fix-cell28.txt  task-1-section-header.txt  task-2-arm-removal-cell58.txt  task-2-class-ratio.txt  task-2-genomic-path.txt  task-2-notebook-structure.txt  task-2-scale-pos-weight.txt  task-3-verification.txt  task-4-artifact-freshness.txt  task-4-artifact-verification.txt  task-4-original-artifact.txt  task-4-shap-features.txt  task-4-summary.txt  task-4-verification.txt  task-8-validation.txt  task-F2-code-quality-final.txt  task-F2-code-quality-review.txt  task5-summary.json
.sisyphus/plans/: fix-arm-feature-leakage.md  improve-ml-pipeline.md
Data/: cell_deconvolution.csv  clinical_data.csv  gene_query.py  genomic_data.csv  implementation_plan.md.resolved  preprocessing.py  ssgsea.csv  walkthrough.md.resolved
Data/test/: cell_deconvolution.csv  clinical.csv  genomic.csv  ssgsea.csv  test_labels.csv  y_test.npy
Data/test_nivo/: cell_deconvolution.csv  clinical.csv  genomic.csv  ssgsea.csv  y_test_labels.csv
artifacts/: 01_Model_Development.ipynb  02_Model_Deployment.ipynb  best_pipeline_extended.joblib
hackathon/: pyproject.toml
(+16 files in other folders)
