[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "miceforest>=6.0.5",
    "missingno>=0.5.2",
    "mygene>=3.2.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scikit-multilearn>=0.2.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tidepy>=1.3.9",
    "xgboost>=3.2.0",
]
